clash-tracker/main/objects/Clan_War_Performance__c/Clan_War_Performance__c.object-meta.xml
<CustomObject>
    <label>Clan War Performance</label>
    <nameField>
        <label>Clan War Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan War Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>