clash-tracker/main/objects/Clan_War_Performance__c/fields/Attacker__c.field-meta.xml
<CustomField>
    <fullName>Attacker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attacker</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Clan War Performances</relationshipLabel>
    <relationshipName>Clan_War_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>