clash-tracker/main/objects/Clan_War_Performance__c/fields/Clan_War__c.field-meta.xml
<CustomField>
    <fullName>Clan_War__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clan War</label>
    <referenceTo>Clan_War__c</referenceTo>
    <relationshipLabel>Clan War Performances</relationshipLabel>
    <relationshipName>Clan_War_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>