clash-tracker/main/objects/Clan_War_Performance__c/fields/Destruction_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Destruction_Percentage__c</fullName>
    <label>Destruction Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>