clash-tracker/main/objects/Clan_War_Performance__c/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <label>Stars</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>